
add_library(structures-lib pds.cpp 
                           boolexpression.cpp
                           program.cpp
                           variableexpression.cpp
                           counterexpression.cpp
                           multi_pds.cpp
                           epresburger.cpp)
